--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>  
     <dependency>
         <groupId>simple-jndi</groupId>
