--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,13 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.1.10</version>
         <scope>test</scope>
-    </dependency>           
+    </dependency>
+    <dependency>
+        <groupId>com.basho.riak</groupId>
+        <artifactId>riak-client</artifactId>
+        <version>0.11.0</version>
+        <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
