--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <description>
     Persistence mapping for Java apps
   </description>
-  <url>http://dasein-persist.sf.net</url>
+  <url>https://github.com/greese/dasein-persist</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,12 +27,12 @@
     <name>enStratus Networks Inc</name>
     <url>http://www.enstratus.com</url>
   </organization>
-    
-  <scm>
-    <connection>scm:svn:https://dasein-persist.svn.sourceforge.net/svnroot/dasein-persist/trunk/dasein-persist</connection>
-    <developerConnection>scm:svn:https://dasein-persist.svn.sourceforge.net/svnroot/dasein-persist/trunk/dasein-persist</developerConnection>
-    <url>https://dasein-persist.svn.sourceforge.net/svnroot/dasein-persist/trunk/dasein-persist</url>
-  </scm>
+
+    <scm>
+        <connection>scm:git:git://github.com/greese/dasein-persist.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/greese/dasein-persist.git</developerConnection>
+        <url>http://github.com/greese/dasein-persist</url>
+    </scm>
       
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -184,9 +184,6 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
             <version>2.1</version>
-            <configuration>
-                <tagBase>https://dasein-persist.svn.sourceforge.net/svnroot/dasein-persist/tags/dasein-persist</tagBase>
-            </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
