--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     <dependency>
     	<groupId>org.dasein</groupId>
     	<artifactId>dasein-util</artifactId>
-    	<version>2012.08</version>
+    	<version>2013.01-SNAPSHOT</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
