--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.dasein</groupId>
   <artifactId>dasein-persist</artifactId>
-  <version>2013.02-SNAPSHOT</version>
+  <version>2013.02</version>
   <packaging>jar</packaging>
 
   <name>dasein-persist</name>
